--- a/src/Components/Explore/Explore.css
+++ b/src/Components/Explore/Explore.css
@@ -9,6 +9,7 @@
 .description{
     padding-top: 10px;
     line-height:1.5;
+    white-space: pre;
 }
 .Video{
     background-color:cornflowerblue;
