--- a/src/Components/Feedback/Feedback.css
+++ b/src/Components/Feedback/Feedback.css
@@ -1,9 +1,28 @@
-.Feedback{
+/* .Feedback{
     display: flex;
-   flex-direction: column;
+   flex-direction:row;
+   justify-content: center; 
    align-items: center;
-   background-color:aliceblue;
+ 
+} */
+.divbox{
+    padding-top:50px;
+    padding-bottom: 50px;
 }
+.Feedback {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px 2em;
+     /* grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 20px 5px; */
+    margin: auto;
+    padding-left: 70px;
+  }
+  
+  .Feedback :first-child {
+      align-self: center;
+  }
+       
 .button{
     background-color: black;
     color:white;
@@ -14,12 +33,19 @@
     width:100%;
     display: flex;
     justify-content: center;
+    padding-top: 20px;
     align-items: center;
-    
+    background-color:aliceblue;
    
 }
 #text{
     height:100px;
     width: 200px;
 }
-
+.avatar {
+    padding-top: 10px;
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
